--- a/src/assets/css/mui.css
+++ b/src/assets/css/mui.css
@@ -4979,7 +4979,7 @@ body > .mui-progressbar
     font-weight: normal;
     font-style: normal;
 
-    src: url('../fonts/mui.ttf') format('truetype');
+    src: url('mui.ttf') format('truetype');
 }
 .mui-icon
 {
